# openclaw-ins

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.json  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  lint.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-UI-SPEC.md  01-VERIFICATION.md
.planning/phases/02-docker-integration/: 02-VERIFICATION.md  02-docker-integration-01-SUMMARY.md  02-docker-integration-02-SUMMARY.md  RESEARCH.md
.planning/phases/03-installation-engine/: 03-installation-engine-01-SUMMARY.md  03-installation-engine-02-SUMMARY.md  03-installation-engine-03-SUMMARY.md  RESEARCH.md
.planning/phases/04-configuration-sandboxing/: 04-configuration-sandboxing-01-SUMMARY.md  04-configuration-sandboxing-02-SUMMARY.md  04-configuration-sandboxing-03-SUMMARY.md  04-verification.md
.planning/phases/05-monitoring/: 05-VERIFICATION.md  05-monitoring-01-SUMMARY.md
.planning/phases/06-lifecycle/: 06-VERIFICATION.md  06-lifecycle-01-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/: App.tsx  index.css  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: channels.rs  config.rs  control_ui.rs  desktop_config.rs  docker.rs  gateway.rs  gateway_ws.rs  install.rs  mod.rs  models.rs  monitoring.rs  nodejs.rs  openclaw_metadata.rs  platform.rs  silent.rs  system_check.rs  uninstall.rs  update.rs  verify_installation.rs
src-tauri/src/docker/: check.rs
src-tauri/src/install/: docker_install.rs  mod.rs  native_install.rs  verify.rs
src/config/: openclaw-default.json
src/hooks/: use-channels.ts  use-config.ts  use-docker.ts  use-gateway.ts  use-install.ts  use-models.ts  use-monitoring.ts  use-openclaw-metadata.ts  use-platform.ts
src/lib/: animation.ts  errors.ts
src/pages/: channels.tsx  configure.tsx  dashboard.tsx  install.tsx  monitor.tsx  openclaw-webapp.tsx  settings.tsx  setup-wizard.tsx
src/stores/: use-config-store.ts  use-gateway-store.ts  use-install-store.ts  use-onboarding-store.ts  use-wizard-store.ts
(+93 files in other folders)
