[package]
name = "clawstation"
version = "0.1.0"
description = "Desktop manager for the OpenClaw AI agent platform"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clawstation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = "2.3.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2.3"
thiserror = "2.0.18"
bollard = "0.20"
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = ["full"] }
sysinfo = "0.38"
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
dirs = "6"
getrandom = "0.3"
serde_yaml = "0.9"
tokio-tungstenite = "0.26"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
image = "0.25"

